SVG иконки, первая секция

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<ul class="header-contacts-list list">
 				<li class="header-contacts-item">
-					<a href="mailto:info@devstudio.com" class="header-contacts-link link">info@devstudio.com</a>
+					<a href="mailto:info@devstudio.com" class="header-contacts-link header-contacts-link-mail link">info@devstudio.com</a>
 				</li>
 				<li class="header-contacts-item">
 					<a href="tel:+380961111111" class="header-contacts-link link">+380961111111</a>
@@ -54,21 +54,43 @@
 
 				<ul class="features-list list">
 					<li class="features-item">
+						<div class="features-box-icon">
+							<svg class="features-icon" width="70" height="70">
+								<use href="./img/sprite.svg#icon-1-antenna"></use>
+							</svg>
+						</div>
 						<h3 class="features-title">Внимание к деталям</h3>				
 						<p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
 					</li>
 
 					<li class="features-item">
+						<div class="features-box-icon">
+							<svg class="features-icon" width="70" height="70">
+								<use href="./img/sprite.svg#icon-2-clock"></use>
+							</svg>
+						</div>
 						<h3 class="features-title">Пунктуальость</h3>				
 						<p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
 					</li>
 
 					<li class="features-item"> 
+						<div class="features-box-icon">
+							<svg class="features-icon" width="70" height="70">
+								<use href="./img/sprite.svg#icon-3-diagram"></use>
+							</svg>
+						</div>
+
 						<h3 class="features-title">Планирование</h3>				
 						<p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
 					</li>
 
 					<li class="features-item">
+						<div class="features-box-icon">
+							<svg class="features-icon" width="70" height="70">
+								<use href="./img/sprite.svg#icon-4-astronaut"></use>
+							</svg>
+						</div>
+
 						<h3 class="features-title">Современные технологии</h3>				
 						<p class="features-text">Значимость этих проблем настолько очевидна, что реализыция плановых заданийю</p>
 					</li>
