Добавлен блок клиенты

--- a/index.html
+++ b/index.html
@@ -155,6 +155,48 @@
 				</ul>
 			</div>
 		</section>
+
+		<section class="clients section">
+			<div class="container">
+				<h2 class="clients-titl">Постоянные клиенты</h2>
+
+				<ul class="clients-list list">
+					<li class="clients-item">
+						<svg class="clients-icon" width="106" height="60">
+							<use href="./img/sprite.svg#icon-logo-company1"></use>
+						</svg>
+					</li>
+					<li class="clients-item">
+						<svg class="clients-icon" width="106" height="60">
+							<use href="./img/sprite.svg#icon-logo-company2"></use>
+						</svg>
+					</li>
+					<li class="clients-item">
+						<svg class="clients-icon" width="106" height="60">
+							<use href="./img/sprite.svg#icon-logo-company3"></use>
+						</svg>
+					</li>
+					<li class="clients-item">
+						<svg class="clients-icon" width="106" height="60">
+							<use href="./img/sprite.svg#icon-logo-company4"></use>
+						</svg>
+					</li>
+					<li class="clients-item">
+						<svg class="clients-icon" width="106" height="60">
+							<use href="./img/sprite.svg#icon-logo-company5"></use>
+						</svg>
+					</li>
+					<li class="clients-item">
+						<svg class="clients-icon" width="106" height="60">
+							<use href="./img/sprite.svg#icon-logo-company6"></use>
+						</svg>
+					</li>
+				</ul>
+
+			</div>
+			
+		</section>
+
 	</main>
 
 	<footer class="footer">
