--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
 
 			<ul class="header-contacts-list list">
 				<li class="header-contacts-item">
-					<a href="mailto:info@devstudio.com" class="header-contacts-link header-contacts-link-mail link">info@devstudio.com</a>
+					<a href="mailto:info@devstudio.com" class="header-contacts-link link">
+						<svg class="header-contacts-icon" width="16" height="12">
+							<use href="./img/sprite.svg#icon-mail"></use>
+						</svg>
+					info@devstudio.com</a>
 				</li>
 				<li class="header-contacts-item">
-					<a href="tel:+380961111111" class="header-contacts-link link">+380961111111</a>
+					<a href="tel:+380961111111" class="header-contacts-link link">
+						<svg class="header-contacts-icon" width="10" height="16">
+							<use href="./img/sprite.svg#icon-phone"></use>
+						</svg>
+					+380961111111</a>
 				</li>
 			</ul>
 		</div>
@@ -126,6 +134,36 @@
 						<div class="team-img-caption">
 							<h3 class="team-item-title">Игорь Демьяненко</h3>
 							<p class="taam-text" lang="en">Product Designer</p>
+							<ul class="team-list-social list">
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 
@@ -134,6 +172,36 @@
 						<div class="team-img-caption">
 							<h3 class="team-item-title">Ольга Репина</h3>
 							<p class="taam-text" lang="en">Frontend Developer</p>
+							<ul class="team-list-social list">
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 
@@ -142,6 +210,36 @@
 						<div class="team-img-caption">
 							<h3 class="team-item-title">Николай Тарасов</h3>
 							<p class="taam-text" lang="en">Marketing</p>
+							<ul class="team-list-social list">
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 
@@ -150,6 +248,36 @@
 						<div class="team-img-caption">
 							<h3 class="team-item-title">Михаил Ермаков</h3>
 							<p class="taam-text" lang="en">UI Designer</p>
+							<ul class="team-list-social list">
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-instagram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-twitter"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-facebook"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="team-item-social">
+									<a href="" class="team-link link">
+										<svg class="team-icon" width="20" height="20">
+											<use href="./img/sprite.svg#icon-linkedin"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</li>
 				</ul>
@@ -162,60 +290,107 @@
 
 				<ul class="clients-list list">
 					<li class="clients-item">
-						<svg class="clients-icon" width="106" height="60">
-							<use href="./img/sprite.svg#icon-logo-company1"></use>
-						</svg>
+						<a href="" class="clients-link link">
+							<svg class="clients-icon" width="106" height="60">
+								<use href="./img/sprite.svg#icon-logo-company1"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="clients-item">
-						<svg class="clients-icon" width="106" height="60">
-							<use href="./img/sprite.svg#icon-logo-company2"></use>
-						</svg>
+						<a href="" class="clients-link link">
+							<svg class="clients-icon" width="106" height="60">
+								<use href="./img/sprite.svg#icon-logo-company2"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="clients-item">
-						<svg class="clients-icon" width="106" height="60">
-							<use href="./img/sprite.svg#icon-logo-company3"></use>
-						</svg>
+						<a href="" class="clients-link link">
+							<svg class="clients-icon" width="106" height="60">
+								<use href="./img/sprite.svg#icon-logo-company3"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="clients-item">
-						<svg class="clients-icon" width="106" height="60">
-							<use href="./img/sprite.svg#icon-logo-company4"></use>
-						</svg>
+						<a href="" class="clients-link link">
+							<svg class="clients-icon" width="106" height="60">
+								<use href="./img/sprite.svg#icon-logo-company4"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="clients-item">
-						<svg class="clients-icon" width="106" height="60">
-							<use href="./img/sprite.svg#icon-logo-company5"></use>
-						</svg>
+						<a href="" class="clients-link link">
+							<svg class="clients-icon" width="106" height="60">
+								<use href="./img/sprite.svg#icon-logo-company5"></use>
+							</svg>
+						</a>
 					</li>
 					<li class="clients-item">
-						<svg class="clients-icon" width="106" height="60">
-							<use href="./img/sprite.svg#icon-logo-company6"></use>
-						</svg>
+						<a href="" class="clients-link link">
+							<svg class="clients-icon" width="106" height="60">
+								<use href="./img/sprite.svg#icon-logo-company6"></use>
+							</svg>
+						</a>
 					</li>
 				</ul>
-
 			</div>
-			
 		</section>
-
 	</main>
 
 	<footer class="footer">
-		<div class="container">
-			<a href="./index.html" class="footer-logo link" lang="en"><span class="footer-logo-part">Web</span>Studio</a>
+		<div class="container footer-container">
+			<div class="footer-contacts">
+				<a href="./index.html" class="footer-logo link" lang="en"><span class="footer-logo-part">Web</span>Studio</a>
 
-			<address class="footer-address">
-				<ul class="footer-list list">
-					<li class="footer-item">
-						<a href="https://goo.gl/maps/eJTLfQxmytLTJuuw9" class="footer-address-link link" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+				<address class="footer-address">
+					<ul class="footer-list list">
+						<li class="footer-item">
+							<a href="https://goo.gl/maps/eJTLfQxmytLTJuuw9" class="footer-address-link link" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+						</li>
+						<li class="footer-item">
+							<a href="mailto:info@example.com" class="footer-contacts-link link">info@example.com</a>
+						</li>
+						<li class="footer-item">
+							<a href="tel:+380991111111" class="footer-contacts-link link">+38 099 111 11 11</a>
+						</li>
+					</ul>
+				</address>
+			</div>
+
+			<div class="footer-social">
+				<h2 class="footer-title">Присоединяйтесь</h2>
+
+				<ul class="footer-list-social list">
+					<li class="footer-item-social">
+						<a href="" class="footer-link-social link">
+							<svg class="footer-icon" width="20" height="20">
+								<use href="./img/sprite.svg#icon-instagram"></use>
+							</svg>
+						</a>
 					</li>
-					<li class="footer-item">
-						<a href="mailto:info@example.com" class="footer-contacts-link link">info@example.com</a>
+					<li class="footer-item-social">
+						<a href="" class="footer-link-social link">
+							<svg class="footer-icon" width="20" height="20">
+								<use href="./img/sprite.svg#icon-twitter"></use>
+							</svg>
+						</a>
 					</li>
-					<li class="footer-item">
-						<a href="tel:+380991111111" class="footer-contacts-link link">+38 099 111 11 11</a>
+					<li class="footer-item-social">
+						<a href="" class="footer-link-social link">
+							<svg class="footer-icon" width="20" height="20">
+								<use href="./img/sprite.svg#icon-facebook"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="footer-item-social">
+						<a href="" class="footer-link-social link">
+							<svg class="footer-icon" width="20" height="20">
+								<use href="./img/sprite.svg#icon-linkedin"></use>
+							</svg>
+						</a>
 					</li>
 				</ul>
-			</address>
+			</div>
+
 		</div>
 	</footer>
 
